--- a/index.html
+++ b/index.html
@@ -143,44 +143,58 @@
     <div class="things">
       <div class="container">
         <div class="content">
+            <div class="element">
+                <img src="ASSETS/2 flight.svg" alt="2flight" />
+            </div>
           <div class="head">
             <h1>Things you need <span class="orange">to go</span></h1>
             <p>
-              We ensure that you’ll embark on a perfectly planned, safe vacation
+              We ensure that you’ll embark on a perfectly planned,<br> safe vacation
               at a price you can afford.
             </p>
           </div>
+         
           <div class="cards">
+
             <div class="card-1">
-              <img src="ASSETS/signup.svg" alt="signup" />
-              <h4>Sign Up</h4>
-              <p>Completes all the work associated with planning and processing</p>
               <div class="line-1">
                 <img src="ASSETS/line-1.svg" alt="line1">
               </div>
+              <div class="bg"></div>
+              <div class="content">
+                <img src="ASSETS/signup.svg" alt="signup" />
+              <h4>Sign Up</h4>
+              <p>Completes all the work associated <br> with planning and processing</p>
+              </div>              
             </div>
+
             <div class="card-2">
-              <img src="ASSETS/worth of money.svg" alt="money" />
-              <h4>Worth of Money</h4>
-              <p>After successful access then book from exclusive deals & pricing</p>
               <div class="line-2">
                 <img src="ASSETS/line-2.svg" alt="line2">
               </div>
+              <div class="bg"></div>
+              <div class="content">
+                <img src="ASSETS/worth of money.svg" alt="money" />
+                <h4>Worth of Money</h4>
+                <p>After successful access then book <br>from exclusive deals & pricing</p>
+              </div>
             </div>
+
             <div class="card-3">
-              <img src="ASSETS/location.svg" alt="location" />
-              <h4>Exciting Travel</h4>
-              <p>Start and explore a wide range of exciting travel experience.</p>
               <div class="line-3">
                 <img src="ASSETS/line-1.svg" alt="line3">
               </div>
+              <div class="bg"></div>
+              <div class="content">
+                <img src="ASSETS/location.svg" alt="location" />
+                <h4>Exciting Travel</h4>
+                <p>Start and explore a wide range of  <br> exciting travel experience.</p>
+              </div>
+              
             </div>
           </div>
         </div>
-        <div class="element">
-          <img src="ASSETS/2 flight.svg" alt="2flight" />
-        </div>
-      </div>
+    </div>
     </div>
   </body>
 </html>
