Media queries completed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <img src="ASSETS/Logo.png" alt="#" />
           </div>
           <div class="menu">
+           <div>
+           <label for="check"> <i class="fa-solid fa-bars"></i>
+           </label></div>
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
@@ -131,8 +134,9 @@
                   <p>Number of guest</p>
                 </div>
               </div>
+              <button class="btn-light">Explore Now</button>
             </div>
-            <button class="btn-light">Explore Now</button>
+            
           </div>
         </div>
       </div>
